cmake_minimum_required(VERSION 3.29)
project(codes_style_lab2)

set(CMAKE_CXX_STANDARD 20)

add_executable(codes_style_lab2
        1/stack.cpp
        1/stack.h
        1/main.cpp
        1/1.cpp
        2/queue.cpp
        2/queue.h
        2/main.cpp
        2/2.cpp
        3/list.cpp
        3/list.h
        3/main.cpp
        3/3.cpp
        4/double_list.cpp
        4/double_list.h
        4/main.cpp
        4/4.cpp
        5/container.cpp
        5/container.h
        5/5.cpp
        5/main.cpp)
